<resources>
    <string name="app_name">My Hang Man Application</string>
    <string name="hang_man_title">HANG MAN</string>
    <string name="play_game">PLAY GAME</string>
    <string name="about">ABOUT</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="game_instructions">To game objective is to letter by letter, guess a randomly chosen word. If you choose a right letter it will appear and you carry on guessing the rest of the word. Once you have the full word down you win. You have 8 guesses on you before the man is Hanged and you loos the game. </string>
    <string name="back_to_menu">Back to menu</string>
    <string name="button">Button</string>
    <string name="about_game">This game was made in Decmber 2019 by David Nordström as a practical assignment. </string>
    <string name="todo">TODO</string>
    <string name="guess">Guess!</string>
    <string name="y">Y</string>
    <string name="a">A</string>
    <string name="m">M</string>
    <string name="x">X</string>
    <string name="z">Z</string>
    <string name="Å">Å</string>
    <string name="u">U</string>
    <string name="t">T</string>
    <string name="v">V</string>
    <string name="r">R</string>
    <string name="w">W</string>
    <string name="Ä">Ä</string>
    <string name="Ö">Ö</string>
    <string name="b">B</string>
    <string name="q">Q</string>
    <string name="p">P</string>
    <string name="h">H</string>
    <string name="j">J</string>
    <string name="i">I</string>
    <string name="d">D</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="g">G</string>
    <string name="f">F</string>
    <string name="o">O</string>
    <string name="s">S</string>
    <string name="c">C</string>
    <string name="n">N</string>
    <string name="e">E</string>
<string name="Winner">YOU WON!</string>
    <string name="Looser">YOU LOST!</string>
    <string name="hangmanpic">Hangmanpic</string>
    <string name="test">Test</string>
    <string name="retry">RETRY</string>

</resources>
