<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GamePlayActivity"
    android:orientation="vertical"
    android:background="@android:color/holo_blue_dark">

    <ImageView
        android:id="@+id/hangman_pic"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="5dp"
        android:contentDescription="@string/hangmanpic"
        android:src="@drawable/hangmanpic0" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <EditText
            android:id="@+id/letter1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:inputType="text"
            android:maxLength="1"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/letter2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:inputType="text"
            android:maxLength="1"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/letter3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:inputType="text"
            android:maxLength="1"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/letter4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:inputType="text"
            android:maxLength="1"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/letter5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:inputType="text"
            android:maxLength="1"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/letter6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:inputType="text"
            android:maxLength="1"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/letter7"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:inputType="text"
            android:maxLength="1"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="invisible" />


    </LinearLayout>

    <TextView
        android:id="@+id/number_of_letters"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/test"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/A"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/a"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:onClick="evaluateInputLetter"
            />

        <Button
            android:textAllCaps="false"
            android:id="@+id/B"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/b"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="evaluateInputLetter"
            />

        <Button
            android:textAllCaps="false"
            android:onClick="evaluateInputLetter"
            android:id="@+id/C"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/c"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:textAllCaps="false"
            android:onClick="evaluateInputLetter"
            android:id="@+id/D"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/d"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:textAllCaps="false"
            android:onClick="evaluateInputLetter"
            android:id="@+id/E"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/e"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:textAllCaps="false"
            android:onClick="evaluateInputLetter"
            android:id="@+id/F"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/f"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:textAllCaps="false"
            android:onClick="evaluateInputLetter"
            android:id="@+id/G"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/g"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:textAllCaps="false"
            android:onClick="evaluateInputLetter"
            android:id="@+id/H"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/h"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <Button
            android:textAllCaps="false"
            android:onClick="evaluateInputLetter"
            android:id="@+id/I"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/i"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:textAllCaps="false"
            android:onClick="evaluateInputLetter"
            android:id="@+id/J"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/j"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:textAllCaps="false"
            android:onClick="evaluateInputLetter"
            android:id="@+id/K"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/k"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:textAllCaps="false"
            android:onClick="evaluateInputLetter"
            android:id="@+id/L"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/l"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:textAllCaps="false"
            android:onClick="evaluateInputLetter"
            android:id="@+id/M"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/m"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:textAllCaps="false"
            android:onClick="evaluateInputLetter"
            android:id="@+id/N"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/n"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:textAllCaps="false"
            android:onClick="evaluateInputLetter"
            android:id="@+id/O"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/o"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:textAllCaps="false"
            android:onClick="evaluateInputLetter"
            android:id="@+id/P"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/p"
            android:textSize="30sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <Button
            android:textAllCaps="false"
            android:onClick="evaluateInputLetter"
            android:id="@+id/Q"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/q"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:textAllCaps="false"
            android:onClick="evaluateInputLetter"
            android:id="@+id/R"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/r"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:textAllCaps="false"
            android:onClick="evaluateInputLetter"
            android:id="@+id/S"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/s"
            android:textSize="30sp"
            android:textStyle="bold" />
        <Button
            android:textAllCaps="false"
            android:onClick="evaluateInputLetter"
            android:id="@+id/T"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/t"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:textAllCaps="false"
            android:onClick="evaluateInputLetter"
            android:id="@+id/U"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/u"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:textAllCaps="false"
            android:onClick="evaluateInputLetter"
            android:id="@+id/V"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/v"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:textAllCaps="false"
            android:onClick="evaluateInputLetter"
            android:id="@+id/W"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/w"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:textAllCaps="false"
            android:onClick="evaluateInputLetter"
            android:id="@+id/X"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/x"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <Button
            android:textAllCaps="false"
            android:onClick="evaluateInputLetter"
            android:id="@+id/Y"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/y"
            android:textSize="30sp"
            android:textStyle="bold"
            android:background="@android:color/black"/>

        <Button
            android:textAllCaps="false"
            android:onClick="evaluateInputLetter"
            android:id="@+id/Z"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/z"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:textAllCaps="false"
            android:onClick="evaluateInputLetter"
            android:id="@+id/Å"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/Å"
            android:textSize="30sp"
            android:textStyle="bold"

            />

        <Button
            android:textAllCaps="false"
            android:onClick="evaluateInputLetter"
            android:id="@+id/Ä"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/Ä"
            android:textSize="30sp"
            android:textStyle="bold"

            />

        <Button
            android:textAllCaps="false"
            android:onClick="evaluateInputLetter"
            android:id="@+id/Ö"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/Ö"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:textAllCaps="false"
            android:onClick="retryGame"
            android:id="@+id/retry_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/retry"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"


            />


    </LinearLayout>





</androidx.appcompat.widget.LinearLayoutCompat>