<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@android:color/holo_blue_dark">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center"
        android:text="@string/hang_man_title"
        android:textColor="@android:color/white"
        android:textSize="70sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        />

    <Button
        android:id="@+id/game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="@string/play_game"
        android:textColor="@android:color/white"
        android:onClick="gamePlay"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        />

    <Button
        android:id="@+id/about_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="@string/about"
        android:textColor="@android:color/white"
        android:onClick="aboutApp"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        />

    <Button
        android:id="@+id/instruction_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="GAME INSTRUCTIONS"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:onClick="instructions"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_weight="1"
        />

</androidx.appcompat.widget.LinearLayoutCompat>